# oakjson

./: .gitignore  CMakeLists.txt  README.md  conanfile.txt
include/oakjson/: base.h  oakjson.h
src/: main.c  oakjson.c
